package com.directi.training.isp.exercise_refractored;

public interface IProximity {
    void proximityCallback();
}
