package com.directi.training.isp.exercise_refractored;

public interface ITimeOut {
    void timeOutCallback();
}
